--- a/Source/src/index.html
+++ b/Source/src/index.html
@@ -11,7 +11,7 @@
 
     <div>1</div>
     <div class="active">2</div>
-    <div>
+    <div class="findme">
         <div class="some">ssss</div>
         <div class="some">qqq</div>
         <div class="some">123</div>
