--- a/Source/src/index.html
+++ b/Source/src/index.html
@@ -30,8 +30,25 @@
         </div>
 
         <!-- Dropdown menu-->
-    </div>
     
+
+    <div class="goods d-flex f-space-around">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGhvdG98ZW58MHx8MHx8&w=1000&q=80" alt="photo" class="card-img">
+            <div class="cart-body"><div class="card-title">Card title</div>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti earum dolores, quis rerum minima impedit.</p>
+            <a href="#" class="btn btn-primary">link to</a></div>
+        </div>
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGhvdG98ZW58MHx8MHx8&w=1000&q=80" alt="photo" class="card-img">
+            <div class="cart-body"><div class="card-title">Card title</div>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti earum dolores, quis rerum minima impedit.</p>
+            <a href="#" class="btn btn-primary">link to</a></div>
+        </div>
+    </div>
+
+
+</div>
     <script src='script.js'></script>
 </body>
 </html>
