--- a/Source/src/index.html
+++ b/Source/src/index.html
@@ -43,11 +43,30 @@
             <img src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGhvdG98ZW58MHx8MHx8&w=1000&q=80" alt="photo" class="card-img">
             <div class="cart-body"><div class="card-title">Card title</div>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti earum dolores, quis rerum minima impedit.</p>
-            <a href="#" class="btn btn-primary">link to</a></div>
+            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">link to</a></div>
         </div>
     </div>
 
-
+    <div class="modal" id="exampleModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <button class="close" data-close>
+                    <span>&times;</span>
+                </button>
+                <div class="modal-header">
+                    <div class="modal-title">Modal-title</div>
+                </div>
+                <div class="modal-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, at. Sapiente     tempora sed ad. Culpa, itaque magnam suscipit quasi sapiente deserunt corporis. Vitae praesentium quasi fugiat exercitationem iste necessitatibus quod.Lorem
+                    
+                </div>
+                
+                <div class="modal-footer">
+                    <button class="btn btn-danger" data-close>Close</button>
+                    <button class="btn btn-success">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
     <script src='script.js'></script>
 </body>
