--- a/Source/src/index.html
+++ b/Source/src/index.html
@@ -43,11 +43,11 @@
             <img src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGhvdG98ZW58MHx8MHx8&w=1000&q=80" alt="photo" class="card-img">
             <div class="cart-body"><div class="card-title">Card title</div>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti earum dolores, quis rerum minima impedit.</p>
-            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">link to</a></div>
+            <a href="#" id="trigger" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">link to</a></div>
         </div>
     </div>
 
-    <div class="modal" id="exampleModal">
+    <!-- <div class="modal" id="exampleModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <button class="close" data-close>
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
     <script src='script.js'></script>
 </body>
