--- a/Source/src/index.html
+++ b/Source/src/index.html
@@ -67,6 +67,35 @@
             </div>
         </div>
     </div> -->
+
+
+
+
+
+<!-- Tabs -->
+
+<div class="tab mt-20 block-center">
+    <div class="tab-panel" data-tabpanel>
+        <div class="tab-item tab-item--active">Content 1</div>
+        <div class="tab-item">Content 2</div>
+        <div class="tab-item">Content 3 </div>
+    </div>
+        <div class="tab-content tab-content--active">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum quod repellendus omnis quaerat doloribus enim vero? Aperiam ratione animi cumque! Saepe, et optio. Enim cum sunt ab facere nam! <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde consequuntur ratione adipisci culpa assumenda cumque repudiandae eum aliquid praesentium corrupti qui, consequatur minima velit magni. Ullam quos labore a illum!
+        </div>
+        <div class="tab-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cum quod repellendus omnis quaerat doloribus enim vero? Aperiam ratione animi cumque! Saepe, et optio. Enim cum sunt ab facere nam!
+        </div>
+        <div class="tab-content">123
+        </div>
+    
+    
+</div>
+
+
+
+
+
+
+
 </div>
     <script src='script.js'></script>
 </body>
