--- a/Source/src/index.html
+++ b/Source/src/index.html
@@ -86,6 +86,23 @@
         </div>
         <div class="tab-content">123
         </div>
+
+        <!-- Accordion -->
+
+        <div class="accordion mt-20 block-center">
+            <div class="accordion-head">
+                <span>Collapse first element</span>
+            </div>
+            <div class="accordion-content">
+                <div class="accordion-inner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quo atque quia? Non quibusdam atque distinctio, magnam laboriosam quis obcaecati optio repellendus iste nobis amet aut consequatur doloremque reprehenderit similique?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere reiciendis, ut vero harum quo nobis illum dolorum molestias itaque quia labore dignissimos, odio dolorem inventore cum. Similique quae asperiores voluptas?</div>
+            </div>
+            <div class="accordion-head">
+                <span>Collapse second element</span>
+            </div>
+            <div class="accordion-content">
+                <div class="accordion-inner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quo atque quia? Non quibusdam atque distinctio, magnam laboriosam quis obcaecati optio repellendus iste nobis amet aut consequatur doloremque reprehenderit similique?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere reiciendis, ut vero harum quo nobis illum dolorum molestias itaque quia labore dignissimos, odio dolorem inventore cum. Similique quae asperiores voluptas?</div>
+            </div>
+        </div>
     
     
 </div>
